# qr_server

./: .gitignore  Cargo.toml
benches/: qr_benchmark.rs
src/: err.rs  main.rs
templates/: result.html  template.html
