[package]
edition = "2021"
name = "qr_service"
version = "0.1.0"

[dependencies]
actix-web = "4"
actix-files = "0.6"
serde = { version = "1.0.216", features = ["derive"] }
qrcode = "0.14.1"
image ="0.25"
tera = { version = "1", default-features = false }
lazy_static = "1.5.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
headless_chrome = {git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = ["fetch"]}
thiserror="2.0.6"
anyhow ="1.0.94"
resvg = "0.44.0"



[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "qr_benchmark"
harness = false